--- a/src/resources/views/account/show.hbs
+++ b/src/resources/views/account/show.hbs
@@ -1,4 +1,4 @@
-<div class="mt-4 product__edit">
+<div class="mt-4 product__edit min-height">
     <h4 class="ml-3 d-inline py-2 px-3 bg-primary text-white">Thông tin tài khoản</h4>
 
     <form action="/accounts/{{account._id}}" method="GET" class="col-3 mt-4">
