--- a/src/resources/views/staffs/create.hbs
+++ b/src/resources/views/staffs/create.hbs
@@ -1,4 +1,4 @@
-<div class="pt-5">
+<div class="pt-5 min-height">
     <div class="m-auto w-50">
         <h1 class="text-center">Thêm nhân viên</h1>
         <form class="col-6 m-auto" action="" method="POST">
