--- a/src/resources/views/account/edit.hbs
+++ b/src/resources/views/account/edit.hbs
@@ -1,4 +1,4 @@
-<div class="mt-4 product__edit">
+<div class="mt-4 product__edit min-height">
     <h4 class="ml-3 d-inline py-2 px-3 bg-primary text-white">ĐỔI MẬT KHẨU</h4>
 
     <form action="/accounts/{{account._id}}/password/edit" method="POST" class="col-2 mt-4">
