--- a/src/resources/views/account/register.hbs
+++ b/src/resources/views/account/register.hbs
@@ -1,4 +1,4 @@
-<div class="pt-5">
+<div class="pt-5 mb-5">
     <div class="m-auto w-50">
         <h1 class="text-center">Đăng ký</h1>
         <form class="col-6 m-auto" action="/register" method="POST">
