--- a/src/resources/views/admin/stored-accounts.hbs
+++ b/src/resources/views/admin/stored-accounts.hbs
@@ -1,4 +1,4 @@
-<div class="mt-4">
+<div class="mt-4 min-height mb-5">
     <div class="mb-4 d-flex justify-content-between align-items-center pr-5">
         <div class="d-flex align-items-center">
             <h3>Danh sách tài khoản</h3>
