--- a/src/resources/views/admin/stored-providers.hbs
+++ b/src/resources/views/admin/stored-providers.hbs
@@ -1,4 +1,4 @@
-<div class="mt-4">
+<div class="mt-4 min-height">
     <div class="mb-4 d-flex justify-content-between align-items-center pr-5">
         <div class="d-flex align-items-center">
             <h3>Danh sách nhà cung cấp</h3>
