--- a/src/resources/views/admin/trash-accounts.hbs
+++ b/src/resources/views/admin/trash-accounts.hbs
@@ -1,4 +1,4 @@
-<div class="mt-4">
+<div class="mt-4 min-height">
   <div class="mb-4 d-flex justify-content-between align-items-center">
     <h3>Danh sách sản phẩm đã xóa</h3>
     <a href="/admin/stored/accounts" class="text-decoration-none">
