--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -4,14 +4,14 @@
         <div class="col-sm-4 col-lg-3 col-xl-2 product">
             <div class="card mb-4 wrap-image">
                 <a href="/products/{{this.slug}}" class="image-hidden">
-                    <img class="card-img-top image-hover d-block w-100" src="../{{this.images.[0]}}" alt="X">
+                    <img class="card-img-top image-hover d-block w-100" src="{{this.images.[0]}}" alt="X">
                 </a>
-                <div class="card-body">
+                <div class="card-body card-info">
                     <a href="/products/{{this.slug}}" class="text-decoration-none">
                         <h5 class="card-title text-dark">{{this.name}}</h5>
                     </a>
-                    <p class="card-text"><b>{{this.cost}}</b> VNĐ</p>
-                    <p class="text-right mb-0"><a href="#" class="btn btn-outline-primary">Thêm vào giỏ</a></p>
+                    <p class="card-text card-cost"><b>{{this.cost}}</b> VNĐ</p>
+                    <p class="text-right mb-0"><a href="#" class="btn btn-outline-success card-cart">Thêm vào giỏ</a></p>
                 </div>
             </div>
         </div>
