--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -45,5 +45,13 @@
   <a class="navbar-brand navbar__item" href="">CHÂN VÁY</a>
   <a class="navbar-brand navbar__item" href="">VÁY</a>
   <a class="navbar-brand navbar__item" href="">PHỤ KIỆN</a>
+  <form class="form-inline ml-auto header-seacrh">
+    <input class="form-control mr-sm-2" type="search" placeholder="Thông tin cần tìm kiếm ..." aria-label="Search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+  </form>
+  <a href="#" class="header-cart">
+    <i class="fa fa-shopping-cart"></i>
+    Giỏ hàng
+  </a>
 </nav>
 {{/if}}
