--- a/src/resources/views/providers/create.hbs
+++ b/src/resources/views/providers/create.hbs
@@ -1,4 +1,4 @@
-<div class="mt-4 product__create">
+<div class="mt-4 product__create min-height">
     <h4 class="ml-3 d-inline py-2 px-3 bg-primary text-white">Nhà cung cấp</h4>
     <form action="" method="POST" class="col-3 mt-4">
         <div class="form-group">
