--- a/src/resources/views/staffs/edit.hbs
+++ b/src/resources/views/staffs/edit.hbs
@@ -1,4 +1,4 @@
-<div class="mt-4 product__edit">
+<div class="mt-4 product__edit min-height">
     <h4 class="ml-3 d-inline py-2 px-3 bg-primary text-white">Thông tin của {{staff.name}}</h4>
 
     <form action="/staffs/{{staff._id}}?_method=PUT" method="POST" class="col-3 mt-4" enctype="multipart/form-data">
