--- a/src/resources/views/products/show.hbs
+++ b/src/resources/views/products/show.hbs
@@ -74,19 +74,26 @@
                 <h5 class="card-title">Mô tả sản phẩm:</h5>
                 <p class="cart-text font-italic text-muted text-description">{{ product.description }}</p>
             </div>
-            <div class="d-flex justify-content-around">
+            <div class="d-flex">
                 <form action="/cart/{{product._id}}" method="POST">
                     <button type="submit" class="btn btn-success">
                         <i class="fa fa-cart-plus"></i>
                         THÊM VÀO GIỎ
                     </button>
                 </form>
-                <form action="" method="POST" class="text-right">
-                    <button type="submit" class="btn btn-success">
+                <div class="product-order text-right">
+                    {{#if count}}
+                    <a href="/cart/checkout" class="btn btn-success">
                         <i class="fa fa-shopping-cart"></i>
-                        MUA HÀNG
-                    </button>
-                </form>
+                        ĐẶT HÀNG
+                    </a>
+                    {{else}}
+                    <a href="/cart/checkout" class="btn btn-success disabled">
+                        <i class="fa fa-shopping-cart"></i>
+                        ĐẶT HÀNG
+                    </a>
+                    {{/if}}
+                </div>
             </div>
         </div>
         <div class="col-3">
