--- a/src/resources/views/products/show.hbs
+++ b/src/resources/views/products/show.hbs
@@ -83,15 +83,22 @@
                 </form>
                 <div class="product-order text-right">
                     {{#if count}}
-                    <a href="/cart/checkout" class="btn btn-success">
-                        <i class="fa fa-shopping-cart"></i>
-                        ĐẶT HÀNG
-                    </a>
+                        {{#if userId}}
+                            <a href="/cart/checkout" class="btn btn-success">
+                                <i class="fa fa-shopping-cart"></i>
+                                ĐẶT HÀNG
+                            </a>
+                        {{else}}
+                            <button type="button" class="btn btn-success form-order" data-toggle="modal"
+                                data-target="#exampleModal">
+                                Tiến hành đặt hàng
+                            </button>
+                        {{/if}}
                     {{else}}
-                    <a href="/cart/checkout" class="btn btn-success disabled">
-                        <i class="fa fa-shopping-cart"></i>
-                        ĐẶT HÀNG
-                    </a>
+                        <a href="/cart/checkout" class="btn btn-success disabled">
+                            <i class="fa fa-shopping-cart"></i>
+                            ĐẶT HÀNG
+                        </a>
                     {{/if}}
                 </div>
             </div>
@@ -172,6 +179,31 @@
                     <div class="fb-comments" data-href="https://www.facebook.com/lyrashop105" data-width="1000"
                         data-numposts="2"></div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">LƯU Ý!</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Bạn phải <a href="/login" class="text-danger text-decoration-none">đăng nhập</a> trước khi đặt hàng
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Hủy</button>
+                <button type="button" class="btn btn-primary">
+                    <a href="/login" class="text-white text-decoration-none">Đăng nhập</a>
+                </button>
             </div>
         </div>
     </div>
