--- a/src/resources/views/cart/check.hbs
+++ b/src/resources/views/cart/check.hbs
@@ -21,11 +21,11 @@
                         id="address">
                 </div>
                 <div class="custom-control custom-radio mt-4">
-                    <input type="radio" id="payment1" name="payment" class="custom-control-input">
+                    <input type="radio" id="payment1" name="payment" class="custom-control-input" value="cod" checked>
                     <label class="custom-control-label" for="payment1">Thanh toán khi nhận hàng</label>
                 </div>
                 <div class="custom-control custom-radio mt-2">
-                    <input type="radio" id="payment2" name="payment" class="custom-control-input">
+                    <input type="radio" id="payment2" name="payment" class="custom-control-input" value="online">
                     <label class="custom-control-label" for="payment2">Thanh toán online</label>
                 </div>
             </div>
@@ -64,23 +64,28 @@
                     <p>Tổng số tiền tạm tính</p>
                     <p>{{ this.sum }} VNĐ</p>
                 </div>
-                <div class="d-flex justify-content-between pt-3">
-                    <p>Điểm tích lũy</p>
-                    {{!-- <p>{{ customer.point }} điểm</p> --}}
-                    <form action="" method="POST">
-                        <input type="text" name="point" class="form-control col-4" value="{{ customer.point }} ">
-                        <button type="submit" class="btn btn-primary">Use</button>
-                    </form>
+                <div class="d-flex justify-content-between align-items-center pt-3">
+                    <p class="mr-auto">Điểm tích lũy</p>
+                    <div class="custom-control custom-checkbox custom-point">
+                        <input type="checkbox" class="custom-control-input" id="customCheck1" name="check" value="checked">
+                        <label class="custom-control-label" for="customCheck1">
+                            <input type="text" class="form-control" value="{{ customer.point }}" name="point">
+                        </label>
+                    </div>
                 </div>
+                <p class="text-right text-muted font-italic mb-0 mt-1">(1 điểm tích lũy tương ứng với 1000 VNĐ)</p>
+                {{#if error}}
+                <p class="m-0 text-danger text-right">{{ this.error }}</p>
+                {{/if}}
                 <div class="d-flex justify-content-between pt-3">
                     <p>Phí vận chuyển</p>
                     <p>0 VNĐ</p>
                 </div>
                 <div class="d-flex justify-content-between pt-4 border-top">
                     <h5>Tổng cộng</h5>
-                    <h4>{{ this.sumPoint }} VNĐ</h4>
+                    <h4>{{ this.sum }} VNĐ</h4>
                 </div>
-                <button type="submit" class="btn btn-success col-12 mt-4">THANH TOÁN</button>
+                <button type="submit" class="btn btn-success w-100 mt-3">THANH TOÁN</button>
             </div>
         </div>
     </form>
