--- a/src/resources/views/partials/header.hbs
+++ b/src/resources/views/partials/header.hbs
@@ -22,6 +22,7 @@
       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
       {{#unless admin}}
         <a class="dropdown-item" href="/infoaccount">Thông tin tài khoản</a>
+        <a class="dropdown-item" href="/order">Đơn hàng đã đặt</a>
       {{/unless}}
         <a class="dropdown-item" href="/logout">Đăng xuất</a>
       </div>
@@ -35,8 +36,8 @@
   <a class="navbar-brand navbar__item" href="/admin/stored/staffs">Quản lý nhân viên</a>
   <a class="navbar-brand navbar__item" href="/admin/stored/customers">Quản lý khách hàng</a>
   <a class="navbar-brand navbar__item" href="/admin/stored/providers">Quản lý nhà cung cấp</a>
-  <a class="navbar-brand navbar__item" href="#">Quản lý đặt hàng</a>
-  <a class="navbar-brand navbar__item" href="#">Quản lý hóa đơn</a>
+  <a class="navbar-brand navbar__item" href="/admin/stored/orders">Quản lý đặt hàng</a>
+  <a class="navbar-brand navbar__item" href="/admin/stored/bills">Quản lý hóa đơn</a>
 </nav>
 {{else}}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-5 py-0">
@@ -56,5 +57,8 @@
     ({{count}})
     {{/if}}
   </a>
+  {{#if person}}  
+    <p class="m-0 text-primary">Điểm tích lũy của bạn: <span class="font-weight-bold">{{ person.point }}</span></p>
+  {{/if}}
 </nav>
 {{/if}}
