--- a/src/resources/views/customers/order.hbs
+++ b/src/resources/views/customers/order.hbs
@@ -29,7 +29,7 @@
                 <td>{{ this.remainder }}</td>
                 <td>{{ this.payment }}</td>
                 <td>{{ this.createdAt }}</td>
-                {{#if this.order}}
+                {{#if this.process}}
                     <th>Đã xử lý</th>
                 {{else}}
                     <th>Chưa xử lý</th>
