--- a/src/resources/views/bill/view.hbs
+++ b/src/resources/views/bill/view.hbs
@@ -1,5 +1,5 @@
-<div class="mt-4 mb-5 container min-height">
-    <h1 class="text-center mb-4">Chi tiết đơn hàng</h1>
+<div class="mt-5 mb-5 container min-height">
+    <h1 class="text-center">Chi tiết hóa đơn</h1>
     <div class="my-4">
         <h5>
             <span>Tên khách hàng:</span>
@@ -39,7 +39,7 @@
         </tbody>
     </table>
     {{#if sum}}
-     <div class="ml-auto w-50">
+    <div class="ml-auto w-50">
         <h5 class="d-flex justify-content-between">
             <span class="text-muted">Tổng tiền tạm tính:</span>
             <span class="ml-3 text-danger">{{ this.sum }} VNĐ</span>
@@ -58,4 +58,9 @@
         </h5>
     </div>
     {{/if}}
+    <p class="text-right mt-4 font-weight-bold">Nhân viên bán hàng</p>
+    <p class="text-right mr-5 font-italic">{{ this.staff }}</p>
+    <div class="text-right mt-4">
+        <button onclick="window.print()" class="btn btn-success btn-none">Xuất hóa đơn</button>
+    </div>
 </div>
