--- a/src/resources/views/cart/check.hbs
+++ b/src/resources/views/cart/check.hbs
@@ -79,11 +79,11 @@
                 {{/if}}
                 <div class="d-flex justify-content-between pt-3">
                     <p>Phí vận chuyển</p>
-                    <p>0 VNĐ</p>
+                    <p>{{ this.ship }} VNĐ</p>
                 </div>
                 <div class="d-flex justify-content-between pt-4 border-top">
                     <h5>Tổng cộng</h5>
-                    <h4>{{ this.sum }} VNĐ</h4>
+                    <h4>{{ this.remainder }} VNĐ</h4>
                 </div>
                 <button type="submit" class="btn btn-success w-100 mt-3">THANH TOÁN</button>
             </div>
